Little changes on the css file and html

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     text-transform: uppercase;
     letter-spacing: .5em;
     top: 15%;
-	background: linear-gradient(180deg, #FF0055 0%, #000066 100%); /* Standard syntax */
+	background: linear-gradient(to right, red , yellow); /* Standard syntax */
 }
 
 h1 {
@@ -30,8 +30,4 @@ img {
     border-style: double;
     border-color: rgb(226, 218, 218);
     box-sizing: content-box;
-}
-
-nav {
-    nav-index: auto;
 }
