--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 h1 {
     font: 600 3.5em 'Raleway', sans-serif;
-    color: rgba(255, 254, 254, 0.842);
+    color: white;
     text-align: center;
     text-transform: uppercase;
     letter-spacing: .2.5em;
@@ -19,7 +19,7 @@ h1 {
 
 h2 {
 	font: 900 1em 'Raleway', sans-serif;
-    color: rgba(3, 0, 0, 0.568);
+    color: rgb(255, 255, 255);
     text-align: center;
     text-transform: initial;
     letter-spacing: 0.01em;
